--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -82,7 +82,7 @@ jobs:
 #         with:
 #           path: ./out
       - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@4.x
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH: gh-pages # The branch the action should deploy to.
