--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "fs": "^0.0.1-security",
     "next": "13.4.6",
     "nextjs-redirect": "^6.0.1",
+    "pdfobject": "^2.2.12",
     "react": "18.2.0",
     "react-collapse": "^5.1.1",
     "react-dom": "18.2.0"
